<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="#00D87070"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forum_black_24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/memory_float"
            android:textAlignment="textStart"
            android:textColor="#414141"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:text="@string/memory_float_post_caption"
            android:textAlignment="textStart"
            android:textColor="#838383"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/SubTitle1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSub"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/poster_information"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/NickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/job"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/PastAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/past_address"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/CurrentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/current_address"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/SubTitle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/colorSub"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/memory_information"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Memory"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/memory"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/TimeSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/time_series"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/emotion"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/picture"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ConfirmationButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="sendMessage"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/confirmation"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>


</LinearLayout>