<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="#00D87070"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_gps_fixed_black_24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/spot_list"
            android:textAlignment="textStart"
            android:textColor="#414141"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_spot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#FFFFFF"
        tools:context=".RouteChoiceSpot">
        <!-- 上の id と context 変えるの忘れずに -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/ButtonArahama"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:background="#00FFFFFF"
            android:onClick="onButton1" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:background="#00ECECEC"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/spot_list_narrowing"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/spot_list_sorting"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>


</LinearLayout>