<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="#00D87070"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_trending_up_black_24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/route_visit"
            android:textAlignment="textStart"
            android:textColor="#414141"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:text="@string/choice_spot_caption"
            android:textAlignment="textStart"
            android:textColor="#838383"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#FFFFFF"
        android:id="@+id/activity_route_choice_spot"
        tools:context=".RouteChoiceSpotActivity">
        <!-- 上の id と context 変えるの忘れずに -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="#ECECEC"
        android:elevation="45dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="1dp"
            android:text="@string/choice_spot_selected"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background"
            android:onClick="onButton1"
            android:shadowColor="#00FFFFFF"
            android:text="@string/cast_tracks_chooser_dialog_ok"
            android:textColor="#FFFFFF"
            android:textColorHint="#963A3A"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>